<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pumpkin_planner_app</name>
  <version>0.0.0</version>
  <description>Simple GUI for pumpkin carving
  </description>

  <maintainer email="smith.15485@osu.edu">Samantha Smith (AIMS Lab @ The Ohio State University)</maintainer>
  <license>Proprietary</license>
  <author email="smith.15485@buckeyemail.osu.edu">Samantha Smith (AIMS @ tOSU)</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>motoros2_interfaces</depend>
  <depend>rviz_selection_3d</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
